test/ui/src/compile_fail/std/emit_props_duplicate_interpolated_defined.rs
fn main() {
    emit::emit!("template {x: 42}", x);
}
